--- a/src/app/modules/noticias/pages/noticia/noticia.component.html
+++ b/src/app/modules/noticias/pages/noticia/noticia.component.html
@@ -1,41 +1,42 @@
 
-<div class="main-container" >
-  <div *ngIf="(newsData | async); else loadingSpinner" fxLayout="column" fxLayoutAlign="start center">
+<div class="main-container">
+  <div class="invisible" id="top"></div>
+  <div *ngIf="(newsData$ | async) as newsData; else loadingSpinner" fxLayout="column" fxLayoutAlign="start center">
     <div class="news-body" fxLayout="column" fxLayoutAlign="start center">
       <div class="news-header mx-0 px-0">
         <div class="d-flex flex-row mx-0">
           <div class="d-flex flex-grow-1 flex-column">
-            <h1 class="my-0 px-0 my-0">{{(newsData | async).title}}</h1>
-            <p>Por {{(newsData | async).author}} {{((newsData | async).date) | date: 'mediumDate' }}</p>
+            <h1 class="my-0 px-0 my-0">{{newsData.title}}</h1>
+            <p>Por {{newsData.author}} {{(newsData.date) | date: 'mediumDate' }}</p>
           </div>
           <div class="d-flex flex-wrap align-self-baseline justify-content-end">
-            <div *ngFor="let tag of data.tags" class="badge news-tags mx-2 mb-1 p-2 d-none d-lg-block">{{tag}}</div>
+            <div *ngFor="let tag of newsData.tags" class="badge news-tags mx-2 mb-1 p-2 d-none d-lg-block">{{tag}}</div>
           </div>
         </div>
         <div class="d-flex flex-wrap align-self-baseline">
-          <div *ngFor="let tag of (newsData | async).tags" class="badge news-tags mr-2 mb-1 p-2 d-lg-none">{{tag}}</div>
+          <div *ngFor="let tag of (newsData.tags)" class="badge news-tags mr-2 mb-1 p-2 d-lg-none">{{tag}}</div>
         </div>
 
       </div>
       <hr class="header-divider">
       <div class="news-intro py-3">
-        <p class="word-break text-justify" [innerHtml]="(newsData | async).shortIntro"></p>
+        <p class="word-break text-justify" [innerHtml]="newsData.shortIntro"></p>
       </div>
       <div class="news-image">
-        <mdb-card-img class="roundedBlock" src="{{(newsData | async).imageUrl}}"
+        <mdb-card-img class="roundedBlock" src="{{newsData.imageUrl}}"
                       alt="Foto de noticia">
         </mdb-card-img>
-        <p class="pt-1">{{(newsData | async).imageText}}</p>
+        <p class="pt-1">{{newsData.imageText}}</p>
       </div>
       <div class="news-content word-break py-5">
-        <div [innerHTML]="content"></div>
+        <div [innerHTML]=""></div>
       </div>
       <div class="news-ratings">
         <h2>{{"NEWS.RATING" | translate}}</h2>
-        <mat-chip-listbox aria-label="Emoji selection">
+        <mat-chip-listbox *ngIf="newsData !== undefined"  aria-label="Emoji selection">
           <div *ngFor="let emoji of emojisList; index as i">
-            <mat-chip-option [selected]="isSelected(i)" (click)="rateNews(emoji, i)">
-              {{(newsData | async).ratings[i]}} <ngx-emoji [emoji]="{ id: emoji, skin: 3 }" size="15"></ngx-emoji>
+            <mat-chip-option [disabled]="!isSelected(i)" [selected]="isSelected(i)" (click)="rateNews(emoji, i)">
+              {{newsData.ratings[i]}} <ngx-emoji [emoji]="{ id: emoji, skin: 3 }" size="15"></ngx-emoji>
             </mat-chip-option>
           </div>
         </mat-chip-listbox>
@@ -49,7 +50,7 @@
           <hr class="title-divider" />
         </div>
         <div class="news-grid col">
-          <div *ngFor="let noticia of recommendedNews" class="recommended-news-card">
+          <div *ngFor="let noticia of (recommendedNews$ | async)" class="recommended-news-card">
             <div class="col-sm margin-top">
               <app-news-card [noticia]="noticia"></app-news-card>
             </div>
