fix(newsPage): missing body text

--- a/src/app/modules/noticias/pages/noticia/noticia.component.html
+++ b/src/app/modules/noticias/pages/noticia/noticia.component.html
@@ -29,7 +29,7 @@
         <p class="pt-1">{{newsData.imageText}}</p>
       </div>
       <div class="news-content word-break py-5">
-        <div [innerHTML]=""></div>
+        <div [innerHTML]="newsData.content"></div>
       </div>
       <div class="news-ratings">
         <h2>{{"NEWS.RATING" | translate}}</h2>
