fix(lint): command throwing js heap error

--- a/src/app/modules/authentication/login/login.component.html
+++ b/src/app/modules/authentication/login/login.component.html
@@ -24,7 +24,7 @@
               </button>
             </div>
 
-            <h4 *ngIf="loginResponse != null"
+            <h4 *ngIf="loginResponse !== null"
                 id="passerr"
                 [class]="{ 'success': loginResponse.success, 'error': !loginResponse.success}"
             >
