--- a/src/app/shared/components/event-card-short/event-card-short.component.html
+++ b/src/app/shared/components/event-card-short/event-card-short.component.html
@@ -9,7 +9,7 @@
         [ngClass]="{'primary-filter': hasPrimaryColorIndex, 'secondary-filter': !hasPrimaryColorIndex}"
       />
       <div class="text-position">
-        <div *ngIf="event.dates[0].date != null" class="date-inner-container">
+        <div *ngIf="event.dates[0].date !== null" class="date-inner-container">
           <span *ngIf="!event.dates[0].showMonth">{{ event.dates[0].date.getDate() }}</span>
           {{ capitalizeFirstLetter(event.dates[0].date.toLocaleString(locale(), { month: 'long' })) }}
         </div>
