--- a/src/app/modules/noticias/pages/noticia/noticia.component.html
+++ b/src/app/modules/noticias/pages/noticia/noticia.component.html
@@ -1,6 +1,5 @@
 
 <div class="main-container">
-  <div class="invisible" id="top"></div>
   <div *ngIf="(newsData$ | async) as newsData; else loadingSpinner" fxLayout="column" fxLayoutAlign="start center">
     <div class="news-body" fxLayout="column" fxLayoutAlign="start center">
       <div class="news-header mx-0 px-0">
@@ -35,7 +34,7 @@
         <h2>{{"NEWS.RATING" | translate}}</h2>
         <mat-chip-listbox *ngIf="newsData !== undefined"  aria-label="Emoji selection">
           <div *ngFor="let emoji of emojisList; index as i">
-            <mat-chip-option [disabled]="!isSelected(i)" [selected]="isSelected(i)" (click)="rateNews(emoji, i)">
+            <mat-chip-option [disabled]="!isSelected(i) && cookieValue !== ''" [selected]="isSelected(i)" (click)="rateNews(emoji, i)">
               {{newsData.ratings[i]}} <ngx-emoji [emoji]="{ id: emoji, skin: 3 }" size="15"></ngx-emoji>
             </mat-chip-option>
           </div>
